--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,34 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.header-nav {
+  width: 100%;
+  height: 10vh;
+  padding: 8px;
+  align-content: flex-end;
+  position: fixed;
+  overflow: auto;
+  background: lightgray;
+}
+
+.sidebar-nav {
+  width: 200px;
+  height: 100%;
+  margin-top: 10vh;
+  position: fixed;
+  overflow: auto;
+  background-color: darkgray;
+}
+
+.body-head {
+  padding-top: 10vh;
+}
+
+.body-head-side {
+  padding-top: 10vh;
+  padding-left: 200px;
+}
+
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
