--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,4 @@
+/* @import url("https://fonts.googleapis.com/css?family=Poppins"); */
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -14,7 +15,7 @@
 }
 
 .sidebar-nav {
-  width: 200px;
+  width: 300px;
   height: 100%;
   margin-top: 10vh;
   position: fixed;
@@ -25,11 +26,33 @@
 
 .body-head {
   padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 
 .body-head-side {
   padding-top: 10vh;
-  padding-left: 200px;
+  padding-bottom: 10vh;
+  padding-left: 300px;
+}
+
+#icon-create:hover {
+  color: oklch(62.7% 0.194 149.214);
+  cursor: pointer;
+}
+
+#icon-read:hover {
+  color: oklch(64.6% 0.222 41.116);
+  cursor: pointer;
+}
+
+#icon-edit:hover {
+  color: oklch(42.4% 0.199 265.638);
+  cursor: pointer;
+}
+
+#icon-delete:hover {
+  color: oklch(57.7% 0.245 27.325);
+  cursor: pointer;
 }
 
 :root {
@@ -173,4 +196,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@theme {
+  /* --font-sans: "Poppins", sans-serif; */
 }
